name:           UISF
version:        1.0.0
Cabal-Version:  >= 1.8
license:        BSD3
license-file:   License
copyright:      Copyright (c) 2013 Daniel Winograd-Cort
category:       GUI
stability:      experimental
build-type:     Simple
author:         Dan Winograd-Cort <dwc@cs.yale.edu>
maintainer:     Dan Winograd-Cort <dwc@cs.yale.edu>
bug-reports:    mailto:dwc@cs.yale.edu
homepage:       http://haskell.cs.yale.edu/
synopsis:       Library for Arrowized Graphical User Interfaces.
description:
        UISF is a library for making arrowized GUIs.
extra-source-files:
        ReadMe.txt,
        FRP/UISF/Examples/EnableGUI.hs

Library
  hs-source-dirs: .
  ghc-options: -O2 -funbox-strict-fields
  exposed-modules: 
        FRP.UISF.Examples.Crud,
        FRP.UISF.Examples.Examples,
        FRP.UISF.Examples.Pinochle,
        FRP.UISF.Types.MSF,
        FRP.UISF.AuxFunctions,
        FRP.UISF.SOE,
        FRP.UISF.UIMonad,
        FRP.UISF.UISF,
        FRP.UISF.Widget,
        FRP.UISF
  other-modules:
  build-depends:
        base >= 3 && < 5, containers, array,
        arrows == 0.4.*, GLFW == 0.5.*, OpenGL, 
        monadIO, deepseq, stm
  if (impl(ghc >= 6.10))
    build-depends: base >= 4 && < 5
